fix some last things
